fixed iframes and scolling containers height on mobile and desktop view

--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,8 @@
   margin-left: 12.5rem;
   margin-right: 12.5rem;
 }
+
+.lazy-load-image-loaded {
+  display: flex !important;
+  justify-content: center !important;
+}
